z-index fix

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ nav{
     min-height: 82.5px;
     top: 0;
     background-color: var(--background-color);
+    z-index: 5;
 }
 nav ul li{
     margin: 20px 30px;
@@ -158,7 +159,7 @@ nav ul li:last-of-type{
     transform: translateY(0%);
 }
 #logo{
-    z-index: 3;
+    z-index: 5;
     margin-left: var(--margin);
     margin-right: auto;
     animation: load-animation var(--load-animation-time) forwards;
